<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Muneem Ji</string>
    <string name="hint_email">  Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="hint_phonenumber">Number</string>
    <string name="house_number">Flat/House No.</string>
    <string name="pin">Pincode</string>
    <string name="street">Street/Locality</string>
    <string name="city">City</string>
    <string name="state">State</string>
     <string name="hintTxtItem">Enter an item here ...</string>
    <string name="lblBtnAdd">Add Item</string>
    <string name="lblBtnDone">Done</string>
    <string name="txtEmpty">List is empty</string>
    <string name="lblBtnDel">Delete</string>

</resources>